--- a/Example/Podfile
+++ b/Example/Podfile
@@ -7,5 +7,16 @@ target 'TKCocoaModule_Example' do
     inherit! :search_paths
 
     
+    
+    post_install do |installer|
+     installer.pods_project.targets.each do |target|
+         target.build_configurations.each do |config|
+             config.build_settings['SWIFT_VERSION'] = '4.2'
+         end
+     end
+    end
+    
+    
+    
   end
 end
